tdf#105881 Toolbar keyboard navigation fixes

This patch makes toolbar keyboard navigation wrap to the begining or end
toolbar item and enables access to the overflow menu using the keyboard.

Change-Id: I5975b0f731beb00cf26f8e8a33e6ea4fa9322881
Reviewed-on: https://gerrit.libreoffice.org/71718
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>